[package]
name = "wasm_client_solana"
version = "0.7.2"
authors = { workspace = true }
categories = ["wasm", "web-programming"]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
tags = ["solana", "wallet", "web3", "blockchain", "websocket", "rpc", "pubsub"]
description = "A wasm compatible solana rpc and pubsub client"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = { workspace = true }
async-tungstenite = { version = "0.28.1", features = ["futures-03-sink"] }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
cfg-if = { workspace = true }
derive_more = { workspace = true, features = ["debug", "deref", "deref_mut", "into", "into_iterator", "from"] }
fork_stream = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
gloo-net = { workspace = true, features = ["websocket"] }
heck = { workspace = true }
js-sys = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
pin-project = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
reqwest-websocket = { workspace = true, optional = true, features = ["json"] }
semver = { workspace = true }
send_wrapper = { workspace = true, features = ["futures"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_tuple = { workspace = true }
serde_with = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }
solana-zk-token-sdk = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint", "serde-traits"] }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }
typed-builder = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console", "HtmlDocument", "Window", "AbortController", "Request", "RequestInit", "AbortSignal", "Response", "Headers"] }
zstd = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
futures-timeout = { workspace = true }
insta = { workspace = true, features = ["redactions", "json"] }
spl-pod = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
test_utils_insta = { workspace = true }
test_utils_keypairs = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
wasm-bindgen-test = { workspace = true }

[features]
js = ["futures-timer/wasm-bindgen"]
ssr = ["dep:reqwest", "dep:reqwest-websocket", "dep:tokio"]
zstd = ["ssr", "dep:zstd"]
