[package]
name = "example_client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
example_program = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
typed-builder = { workspace = true }
wallet_standard = { workspace = true, features = ["solana"] }
wasm_client_anchor = { workspace = true, features = ["ssr"] }
wasm_client_solana = { workspace = true, features = ["ssr"] }

[dev-dependencies]
anyhow = { workspace = true }
assert2 = { workspace = true }
insta = { workspace = true, features = ["ron", "yaml", "redactions"] }
memory_wallet = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"] }
test_utils_anchor = { workspace = true, features = ["test_validator"] }
test_utils_insta = { workspace = true }
test_utils_keypairs = { workspace = true }
test_utils_solana = { workspace = true, features = ["test_validator"] }
tokio = { workspace = true, features = ["test-util", "rt", "macros", "time"] }

[lints]
workspace = true
